--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,21 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven {
+            url "https://maven.pkg.jetbrains.space/data2viz/p/maven/dev"
+        }
+        maven {
+            url "https://maven.pkg.jetbrains.space/data2viz/p/maven/public"
+        }
+        maven {
+            url = uri("https://maven.pkg.jetbrains.space/data2viz/p/charts-1-r/maven")
+            credentials {
+                username = "8441d834-4c7e-4f62-8331-28c2d4815fa9"         // your client id
+                password = "e0e1eb5a0d26f9433f700e91f31c5c9c2cc55283a0dea36fd7bf8f54dbadd0bc"         // your client secret
+            }
+        }
     }
 }
 rootProject.name = "WorkoutOrganizerApp"
-include ':app'
+include ':app', ':library'
